# vaydeer-macro-keyboard

./: .gitignore  9key-f13-f21.yaml  DEVNOTES.md  FIRMWARE.md  README.md  SUPPORTED_KEYS.md  pyproject.toml
examples/: 9key-basic.yaml  9key-media.yaml  9key-raw-codes.yaml  9key-shortcuts.yaml
src/vaydeer_keypad/: __init__.py  cli.py  config.py  errors.py  firmware_codec.py  flasher.py  hid_device.py  key_tester.py  keycodes.py  protocol.py
tests/: test_cli.py  test_config.py  test_firmware_codec.py  test_flasher.py  test_hid_device.py  test_key_tester.py  test_protocol.py
