[project]
name = "vaydeer-macro-keyboard"
version = "0.1.0"
description = "CLI flasher for Vaydeer macro keypad key assignments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "hidapi>=0.14",
  "pyyaml>=6.0",
  "tqdm>=4.66",
]

[project.scripts]
vaydeer-flash = "vaydeer_keypad.cli:main"
vaydeer-key-test = "vaydeer_keypad.key_tester:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vaydeer_keypad"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
